2008-11-26  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Arek,Zaheer

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/misc/httpserver/httpfile.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/plugs/plugs.xml:
	Added a new plug type for request modification
	in http-server and http-streamer.
	Added a plug to force browsers to ask the user to download
	a file instead of playing it automatically.

2008-11-26  Arek Korbik  <arkadini@gmail.com>

	* flumotion/manager/config.py (buildEatersDict):
	Don't warn about uniquifying alias names, it's only of debugging
	interest. Fixes #1176.

2008-11-26  Arek Korbik  <arkadini@gmail.com>

	* conf/examples/default.xml:
	* conf/examples/discont.xml:
	* conf/examples/twores.xml:
	Fix the wrong interpretation, introduced by r7619.
	Eater names are defined by the component, and multiple eater tags
	in a config file should only be used with multiple eaters.
	See #1176.

2008-11-26  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/scenario/steps/diskersteps.py:
	Now the checkboxes and radiobuttons on the disker wizard step are used
	properly when configuring the flow.
	Fixeѕ #1128

2008-11-26  Xavier Queralt Mateu <xqueralt@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	  Fixed wizard tests

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* configure.ac:
	Back to dev.

=== release 0.5.3 ===

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	Releasing 0.5.3 "Ovella Negra".

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/vfsgnome.py (GnomeVFSDirectory.getFiles):